deploy: 6f6bbcacbd62131ddfd198212643a1a9bb1998e1

--- a/Lecture_08_The_Birth_of_ML/Lecture_08_The_Birth_of_ML.html
+++ b/Lecture_08_The_Birth_of_ML/Lecture_08_The_Birth_of_ML.html
@@ -82,7 +82,7 @@
 <div class="middle center">
   <div style="width: 100%">
 
-  # Part.1 感知机，神经网络的起源
+  # Part.1 从感知机开始，再一次认识机器学习
   
   </div>
 </div>
@@ -106,21 +106,29 @@ TODO!
 
 ## 让我们找一个高中学过的二维平面上的问题
 
-现在你有一个二维平面，平面上有一个点集$\{(x_i,y_i,\text{label}_i)\}$（如果你还不熟悉这种表述模式的话，请记住形如$\{x_i\}$的记号一般用来表示一个集合），其中$x_i\in\mathcal R,y_i\in\mathcal R,\text{label}_i\in\{0, 1\}$。
+现在你有一个二维平面，平面上有一个点集及其标签$\{(x_1^{(i)},x_2^{(i)},y^{(i)})\}$，其中$x_j^{(i)}\in\mathcal R,y^{(i)}\in\{0, 1\}$。
 
-现在，我们想找到一条直线，能够尽可能地**分割**$\text{label}_i=1$的点（也可以叫它们正样本）和$\text{label}_i=0$的点（也可以叫它们负样本），使得在直线同一侧的点尽可能都是同一类型。
+现在，我们想找到一个向量，能够尽可能地**分割**$y=1$的点（也可以叫它们正样本）和$y=0$的点（也可以叫它们负样本），使得在向量同一侧的点尽可能都是同一类型。
 
-**注意，这里的**$(x,y)$**指的是坐标！**但之后若不加解释的情况下，我们一般用$\boldsymbol X$（它通常是一个矩阵）表示特征集，$\boldsymbol y$表示标签集。我们会在之后说明这里记号的含义，大家现在有个印象就可以了。
+> 这里我们表示点的方式有些特殊。首先，形如$\{x\}$的记号一般用来表示一个集合。我们在高中表示一个点的形式通常是$(x,y)$，但在这里，点的坐标用$(x_1,x_2)$来表示，而$y$指的是标签。在高中，如果我们想表示第$i$个点，通常会把它写成$(x_i,y_i)$的形式，而在这里下标也变成了上标，还给$i$加上了括号。第一次看见它的时候可能会感觉有点奇怪~~好吧看很多次可能都会感觉很奇怪~~，但这样的表示方式是为了未来的方便。（~~不过加括号是为什么我也不知道~~）
+
+
+## 让我们找一个高中学过的二维平面上的问题
+
 
 <img src="images/perceptron_no_line_ex.png" width="85%" style="display: block; margin: 0 auto;"> <!-- .element: class="fragment" -->
 
 大家可以思考一下如何用人类智慧或者算法解决这个问题。
 
+> 上述提到的点集都是训练集。在实际应用中，你还需要把找到的向量拿到测试集上进行测试，查看你找到的向量分割的效果如何。你发现了没有？其实这里我们隐含了一个假设，就是训练集和测试集是类似的，或者说，**来源于同一分布**。我们将在这节课的扩展部分稍微多聊聊这里的内容。
+
+> 如果你在网上查找感知机有关的内容，你可能会发现它们的文章中提到的任务想找到的是一条直线。请思考：这个任务和我们提到的找向量有区别吗？如果有，是什么区别？
+
 <!--v-->
 
 ## 人类智慧
 
-用肉眼观察可得：注意到在上面的例子里有一条直线可以完全分开两个类别，用强大的人类大脑可以把这条直线画出来。
+用肉眼观察可得：注意到在上面的例子里有一条向量可以完全分开两个类别，用强大的人类大脑可以把这条直线画出来。
 
 <img src="images/perceptron_ex.png" width="85%" style="display: block; margin: 0 auto;"> <!-- .element: class="fragment" -->
 
@@ -138,114 +146,79 @@ TODO!
 
 ## 感知机（Perceptron）
 
-感知机由美国学者Frank Rosenblatt在1957年提出，是一个**二分类的线性分类模型**
+感知机由美国学者Frank Rosenblatt在1957年提出。它是怎么处理上面的问题的呢？其实非常简单：
 
-## 这部分是描述感知机的算法
+- Step 1: 设我们要找的向量$\boldsymbol{w}=(w_1,w_2)$，其中$w_1,w_2$为参数，它们在最开始会初始化为一个随机值。
+  > 这样的随机初始化在机器学习中非常常见。
+- Step 2: 对于点$i$，如果$\boldsymbol{w}\cdot\boldsymbol{x^{(i)}}\ge0$但$y^{(i)}<0$，更新$\boldsymbol{w}\leftarrow\boldsymbol{w}-\boldsymbol{x}$；如果$\boldsymbol{w}\cdot\boldsymbol{x^{(i)}}<0$但$y^{(i)}>0$，更新$\boldsymbol{w}\leftarrow\boldsymbol{w}+\boldsymbol{x}$。
+- Step 3: 一直重复Step 2，直到无法再更新为止。然后，感知机就会输出$\boldsymbol{w}$，你可以拿着它去测试集看看结果了。
 
-TODO!
+就这么简单！
+
 <img src="images/perceptron_work_ex.png" width="85%" style="display: block; margin: 0 auto;"> <!-- .element: class="fragment" -->
 
+> 其实，找向量和找直线并没有本质上的区别，毕竟找到了向量，你总有办法找到一条截距合适的直线。但是，之所以我们用找向量来描述这个任务，也是因为用向量的形式描述感知机的过程非常简便。感兴趣的同学可以试着用上面的思路解决找直线的问题，然后思考一下你得出的算法会不会有什么奇怪的地方......比如我们刚刚提到的截距。
 
 
-## 早期机器学习的典型——感知机（perceptron）
+<!--v-->
 
-<div align=center>  
-<img src="image-1.png" width=250> 
-<div align=left> 
+## 感知机的设计思路
 
-* 把上述内容用数学式来表示，就是下面这个式子
+这是一个非常简单而优雅的算法。TODO 设计思路！
 
-$$ y = \left\{\begin{matrix} 
-  0  \left ( w_1 x_1 +w_2x_2 \le \theta \right ) \\  
-  1  \left ( w_1 x_1 +w_2x_2 > \theta \right )
-\end{matrix}\right. $$
+不过，你可能会有一个小小的疑问：这个算法真的能找到解而不一直循环吗？
 
-* 感知机的多个输入信号都有各自固有的权重，这些权重发挥着控制各个信号的重要性的作用。也就是说，权重越大，对应该权重的信号的重要性就越高
+轮到数学家们出手了！
 
----
+Theorem：如果一个点集是线性可分的，那么感知机一定可以在有限步数内找到合法解$\boldsymbol{w}$。
 
-## 早期机器学习的典型——感知机（perceptron）
+> 我们将在这节课的扩展部分稍微多聊聊这里的内容。
 
-* 现在我们取权重参数$(\theta, w1, w2) = (−0.5, 1.0, 1.0)$，并将其可视化
+<!--v-->
 
-$$ y = \left\{\begin{matrix} 
-  0  \left ( -0.5 + x_1 + x_2 \le 0 \right ) \\  
-  1  \left ( -0.5 + x_1 + x_2 > 0 \right )
-\end{matrix}\right. $$
+## 不过，如果点集不是线性可分的话......
 
-<div align=center>  
-<img src="https://i-blog.csdnimg.cn/blog_migrate/a6bcf4af2c4bc6418dfa4062c8ee4937.png#pic_center" width=400> 
-<div align=left> 
+就像这种情况。
 
-* 感知机会生成由直线$−0.5 + x_1 + x_2 = 0$分割开的两个空间.很容易发现，如果我们将上侧空间的点坐标输入给感知机，那么将输出1，否则输出是0
-
-* 这其实就是一个非常简单的**二分类线性模型**，我们可以通过这个模型将一些点分成两类
----
-
-## 感知机的缺陷
-
-* 感知机的缺陷非常明显，因为它仅仅是一个线性模型
-
-* 相信聪明的你已经想到了，如果是下图的点要分类，一个简单的感知机模型显然是是无法做到的
+<img src="images/perceptron_non_lin_sep_ex.png" width="85%" style="display: block; margin: 0 auto;"> <!-- .element: class="fragment" -->
 
 <div align=center>  
 <img src="https://i-blog.csdnimg.cn/blog_migrate/987cd61a7402119b10826f1e4893348f.png#pic_center" width=400> 
 <div align=left> 
 
----
+我们的感知机会不幸死机。
 
-## 感知机的缺陷
+但是，没有人规定机器学习一定要做到100%准确率，哪怕是在训练集上。因此，只要我们保证我们的算法能跑完就好了，至少这样我们能跑出一个结果给我们的甲方爸爸看。换句话说，我们希望我们的机器学习算法能够**收敛（converge）**到一个结果上。
 
-* 图中的○和△无法用一条直线分开，但是如果将“直线”这个限制条件去掉，就可以实现了。比如，我们可以像下图那样，作出分开○和△的空间
+怎么办呢？
 
-<div align=center>  
-<img src="https://i-blog.csdnimg.cn/blog_migrate/488a74468ef07fe2e09c675840335418.png#pic_center" width=400> 
-<div align=left> 
+## 学习率（learning rate）
 
-* 感知机的局限性就在于它只能表示由一条直线分割的空间。上图这样弯曲的曲线无法用感知机表示。另外，由上图这样的曲线（非线性函数）分割而成的空间称为**非线性空间**，由直线（线性函数）分割而成的空间称为**线性空间**
 
----
 
-**挪顺序了**
-## 为什么它叫感知机呢？
+## 回顾上述的一整个流程
 
-* 回想起我们高中生物学过的知识（相信大家已经忘光了）
 
-> 神经细胞结构大致可分为：树突、突触、细胞体及轴突。单个神经细胞可被视为一种只有**两种状态的机器**——激动时为‘是’，而未激动时为‘否’。神经细胞的状态取决于从其它的神经细胞收到的输入信号量，及突触的强度（抑制或加强）。当信号量总和超过了某个阈值时，细胞体就会激动，产生电脉冲。电脉冲沿着轴突并通过突触传递到其它神经元。
 
-<div align=center>  <img src="image.png" width=250> 
+
+
 
 ---
 
-## 早期机器学习的典型——感知机（perceptron）
+**挪顺序了，上面就已经把机器学习的形式化定义讲完了**
 
-* 没错，感知机是生物神经细胞的简单抽象，和神经细胞一样，感知机接受多个输入，最终只有一个输出（一般是0或者1）
+<!--s-->
 
-下图就是一个接收两个输入信号的感知机的例子
+<div class="middle center">
+  <div style="width: 100%">
 
-<div align=center>  
-<img src="image-1.png" width=250> 
+  # Part.2 更多的任务，更多的定义
+  
+  </div>
+</div>
 
-<div align=left> 
+<!--v-->
 
-* x<sub>1</sub> 、 x<sub>2</sub> 是输入信号，y是输出信号， w<sub>1</sub>、 w<sub>2</sub>是权重(weight)。
-
-* 图中的○称为“神经元”或者“节点”。输入信号被送往神经元时，会被分别乘以固定的权重（w<sub>1</sub> x<sub>1</sub> 、 w<sub>2 </sub> x<sub>2</sub>）。神经元会计算传送过来的信号的总和，只有当这个总和超过了某个界限值时，才会输出1。这也称为“神经元被激活” 。这里将这个界限值称为阈值，用符号``θ``表示。
-
----
-
-## 多层感知机（MLP）
-
-* 未解决非线性空间的问题，科学家们引入了多层感知机（MLP，Multilayer Perceptron），也叫做人工神经网络
-<div align=center>  
-<img src="https://i-blog.csdnimg.cn/blog_migrate/fdd829e9575ea0544bcc9c43a01fd488.png" width=400> 
-<div align=left> 
-
-* 多层感知机最底层是输入层，中间是隐藏层，最后是输出层
-
-* MLP在隐藏层中引入了**激活函数**来解决输入输出只能是线性的问题，在此不多赘述
-
----
 
 ## 机器学习的发展
 
