--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 - [Lecture_05_Control_Flow](./Lecture_05_Control_Flow)
 - [Lecture_06_How_To_Use_Python](./Lecture_06_How_To_Use_Python)
 - [Lecture_07_AI_Intro_and_Algorithms](./Lecture_07_AI_Intro_and_Algorithms)
+- [Lecture09](./Lecture09)
 - [Lecture_08_The_Birth_of_ML](./Lecture_08_The_Birth_of_ML)
 - [Lecture_i_Basic_Knowledge](./Lecture_i_Basic_Knowledge)
 
