deploy: 75d20e98ceac0c0f8e1b7497b6b0dfecd5d0c09a

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 - [Lecture_04_Function.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_04_Function/Lecture_04_Function.ipynb)
 - [Lecture_05_Control_Flow.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_05_Control_Flow/Lecture_05_Control_Flow.ipynb)
 - [Lecture_06_How_To_Use_Python.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.ipynb)
+- [Lecture_iii_AI_Libs.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_iii_AI_Libs/Lecture_iii_AI_Libs.ipynb)
 
           </textarea>
         </section>
