deploy: be8d50b002446bf8bab207e77c51dbca44f3ebf3

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 ## SI 100+ Notebook 页
 - [Exercise_01.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Exercises/Exercise_01.ipynb)
 - [Exercise_02.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Exercises/Exercise_02.ipynb)
+- [README.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Exercises/maze-game/README.ipynb)
 - [Lecture_00_Environment.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_00_Environment/Lecture_00_Environment.ipynb)
 - [Lecture_02_Python_Intro.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_02_Python_Intro/Lecture_02_Python_Intro.ipynb)
 - [Lecture_03_Var_Operator_Expr.ipynb](https://nbviewer.org/github/teafrogsf/SI100Plus/blob/main/Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.ipynb)
