--- a/Lecture_08_The_Birth_of_ML/index.html
+++ b/Lecture_08_The_Birth_of_ML/index.html
@@ -345,17 +345,25 @@ TODO!
 
 这个任务为什么不能被分类概括？它和分类任务有什么区别？
 
-## 
-
-
+像这样的，目标是让预测结果尽可能接近真实结果的任务，叫做**回归（regression）**。
 
 ## 分类与回归，离散与连续
+
+如何区分分类和回归呢？
+
+从人话的角度，其实分类也是在*接近*真实结果对吧？
+
+好像也有那么一点不对——分类希望的是和真实结果*完全一致*——预测和结果是同一个类别。
+
+找到概括的方法了吗？
 
 * 事实上，一切机器学习的任务都可以分成**分类**和**回归**
 
 * **分类**就是对数据分进行分类（好吧好像是废话~），预测的结果往往是一系列**离散**的数据
 
 * **回归**是一种数学模型，利用数据统计原理，对大量统计数据进行数学处理，建立一个相关性较好的回归方程（函数/映射），预测的事实上是一个**连续**的结果
+
+## 
 
 
 上面说的不对，分类和回归的唯一区别在于损失函数不同
@@ -366,11 +374,15 @@ TODO!
 
 TODO!
 
-
-
 ## 再次再次回到魔法盒子
 
-不需要y？
+<img src="images/magic_box_ml.png" width="85%" style="display: block; margin: 0 auto;">
+
+如果，我们的机器学习算法不需要ground-truth？
+
+## 疑似逻辑陷阱
+
+
 
 ## 经典的聚类算法——KNN (K-Nearest Neighbors)
 
