--- a/Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.html
+++ b/Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.html
@@ -584,14 +584,14 @@ def calculate_area(shape, *dimensions):
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.md"],"static":"static/Lecture_06_How_To_Use_Python"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_06_How_To_Use_Python/Lecture_06_How_To_Use_Python.md"],"static":"static/Lecture_06_How_To_Use_Python","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
