--- a/Lecture_00_Environment/Lecture_00_Environment.html
+++ b/Lecture_00_Environment/Lecture_00_Environment.html
@@ -264,14 +264,14 @@
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_00_Environment/Lecture_00_Environment.md"],"static":"static/Lecture_00_Environment"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_00_Environment/Lecture_00_Environment.md"],"static":"static/Lecture_00_Environment","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
