--- a/Lecture_02_Python_Intro/index.html
+++ b/Lecture_02_Python_Intro/index.html
@@ -500,14 +500,14 @@ x = 123 + 456 - (y * 5) ** 2
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_02_Python_Intro/Lecture_02_Python_Intro.md"],"static":"static/Lecture_02_Python_Intro"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_02_Python_Intro/Lecture_02_Python_Intro.md"],"static":"static/Lecture_02_Python_Intro","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
