--- a/Lecture_03_Var_Operator_Expr/index.html
+++ b/Lecture_03_Var_Operator_Expr/index.html
@@ -894,14 +894,14 @@ Python 的布尔运算符就能够这样“偷懒”。
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.md"],"static":"static/Lecture_03_Var_Operator_Expr"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_03_Var_Operator_Expr/Lecture_03_Var_Operator_Expr.md"],"static":"static/Lecture_03_Var_Operator_Expr","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
