--- a/Lecture_07_AI_Intro_and_Algorithms/index.html
+++ b/Lecture_07_AI_Intro_and_Algorithms/index.html
@@ -572,14 +572,14 @@
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_07_AI_Intro_and_Algorithms/Lecture_07_AI_Intro_and_Algorithms.md"],"static":"static/Lecture_07_AI_Intro_and_Algorithms"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_07_AI_Intro_and_Algorithms/Lecture_07_AI_Intro_and_Algorithms.md"],"static":"static/Lecture_07_AI_Intro_and_Algorithms","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
