--- a/Lecture_08_The_Birth_of_ML/index.html
+++ b/Lecture_08_The_Birth_of_ML/index.html
@@ -595,14 +595,14 @@ $$ (点的坐标，颜色) $$
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_08_the_birth_of_ML/Lecture_08_The_Birth_of_ML.md"],"static":"static/Lecture_08_The_Birth_of_ML"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_08_the_birth_of_ML/Lecture_08_The_Birth_of_ML.md"],"static":"static/Lecture_08_The_Birth_of_ML","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
