--- a/Lecture_i_Basic_Knowledge/index.html
+++ b/Lecture_i_Basic_Knowledge/index.html
@@ -323,14 +323,14 @@
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath.KaTeX,
         ]
       };
 
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_i_Basic_Knowledge/Lecture_i_Basic_Knowledge.md"],"static":"static/Lecture_i_Basic_Knowledge"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_i_Basic_Knowledge/Lecture_i_Basic_Knowledge.md"],"static":"static/Lecture_i_Basic_Knowledge","template":"./assets/reveal.html"}, queryOptions);
     </script>
 
 
