deploy: 00c35653cb196d32266ae5b5aa5cc46f6f30a44a

--- a/Lecture_08_The_Birth_of_ML/Lecture_08_The_Birth_of_ML.html
+++ b/Lecture_08_The_Birth_of_ML/Lecture_08_The_Birth_of_ML.html
@@ -409,7 +409,60 @@ TODO!
 
 ## 疑似逻辑陷阱
 
+
 <!--v-->
+
+## 机器学习的学习方式
+
+- 假设有一个人前来买瓜……
+
+<img src="https://ts1.cn.mm.bing.net/th/id/R-C.40660866ffb8656f6f480057435db2cd?rik=Pqe%2bMbu11CArmg&riu=http%3a%2f%2fwww.guangyuanol.cn%2fuploads%2fallimg%2f210623%2f20434W646-5.gif&ehk=oTNL%2bakPK6Uky5UPfBI9Y1idCcCJi42IyKbE%2fNY1DVI%3d&risl=&pid=ImgRaw&r=0"  width="45%" style="display: block; margin: 0 auto;"/>
+
+- 华强最关心的莫过于瓜到底熟没熟
+
+
+<!--v-->
+
+## 机器学习的学习方式 (cont'd)
+
+- 那么，人类如何判断一个瓜熟了没？（不可以劈瓜！！！）
+- 色泽：青绿？乌黑？浅白？ <!-- .element: class="fragment" -->
+- 根蒂：蜷缩？稍蜷？硬挺？ <!-- .element: class="fragment" -->
+- 敲声：浊响？沉闷？清脆？ <!-- .element: class="fragment" -->
+- ~~一个优秀的贝斯手往往能通过敲声判断西瓜好坏（经典贝斯笑话）~~ <!-- .element: class="fragment" -->
+
+
+<!--v-->
+
+## 监督学习（supervised learning）
+
+- 如果我们希望训练出一个用来预测是“好瓜”还是“坏瓜”的模型，我们就需要 **样例（Example）**
+  - Note: 这里的“好瓜”，“坏瓜”是离散的，也就是之前提到的 **分类**，如果想预测成熟度 $0.00 \sim 0.99$ 这样连续的数据，那就是之前提到的 **回归** ，你学会了吗（
+- 样例可能是人们 手动提供的 大量的 经验总结：例如  
+`色泽青绿;根蒂蜷缩;敲声浊响 的是 好瓜`
+- <span>由于我们需要提供样例，也就是对模型要学习的训练数据提前做标记，这样的学习需要人类参与 **监督**</span> <!-- .element: class="fragment" -->
+- <span>像这种提供 **输入数据** 和其对应的 **标签数据（label）** ，然后搭建一个模型，模型经过训练后准确的找到输入数据和标签数据之间的 **最优映射关系** ，从而对新的未标记数据进行预测或分类，我们称作 **监督学习(supervised learning)** ，分类和回归就是监督学习的代表</span>  <!-- .element: class="fragment" -->
+
+<!--v-->
+
+## 机器学习的学习方式 (cont'd)
+
+- 太累了！我不想当数据工人！！！怎么办！
+
+<!--v-->
+
+## `sudo 机器自己学`
+
+- 我们还可以对西瓜做 **聚类 (clustering)** ，只提供输入数据，而不事先标注任何东西，让机器自己学习
+- <span> 例如在机器自己学习探索各种西瓜的过程中，会 **自动地** 把西瓜分成许多组，每一组叫一个 **簇 (cluster)** </span>  <!-- .element: class="fragment" -->
+- <span> 所谓 **物以类聚**，也就是机器会在聚类的过程中把 “类似” 的物体聚在一组 </span>  <!-- .element: class="fragment" -->
+- <span>这些自动形成的簇可能对应一些潜在的概念划分，例如 “浅色瓜” “深色瓜” 甚至 “本地瓜” “外地瓜”，而这些是我们 **事先不知道的** </span>  <!-- .element: class="fragment" -->
+- <span> 像这样**训练数据只包含输入样本，通常没有相应的标签或目标**的学习就是 **无监督学习 (unsupervised learnin)** ，聚类是无监督学习的代表 </span>  <!-- .element: class="fragment" -->
+- <span> 无监督学习目标不是告诉计算机怎么做（没有label），而是让它自己去学习怎样做事情。 </span>  <!-- .element: class="fragment" -->
+- <span> 这样的学习过程有助于我们了解数据内在的规律，能为更深入地分析数据建立基础. </span>  <!-- .element: class="fragment" -->
+
+
+<!--
 
 ## 经典的聚类算法——KNN (K-Nearest Neighbors)
 
@@ -418,7 +471,7 @@ TODO!
 
 * **距离度量、k值的选择及分类决策规则**是k近邻法的三个基本要素
 
-<!--v-->
+
 
 ## 经典的聚类算法——KNN (K-Nearest Neighbors)
 
@@ -430,9 +483,16 @@ TODO!
 
 * **距离度量、k值的选择及分类决策规则**是k近邻法的三个基本要素
 
-<!--v-->
 
-## 机器学习的学习方式
+
+## 监督学习
+
+* 没听懂？我们再举一个例子
+* 假如有一群 草泥马 和 牛马 组成的马群，这时候需要一个机器对马群进行分类，但是这个机器不知道 草泥马 和 牛马 长什么样儿，所以我们首先拿一堆 草泥马 和 牛马 的照片给机器看，告诉机器 草泥马 和 牛马 **分别** 长什么样儿。机器经过反复的看，形成肌肉记忆，可以对 草泥马 和 牛马 形成自己的定义，然后机器就可以准确的对马群进行分类。
+<div align="center">
+    <img src="image-5.png" alt="图片1" width="300"height="310">
+    <img src="image-6.png" alt="图片2" width="300">
+</div>
 
 ### 监督学习
 
@@ -442,18 +502,8 @@ $$ (点的坐标，颜色) $$
 
 * 像这种提供**输入数据**（比如KNN里的点坐标）和其对应的**标签数据（label**，KNN的点的颜色），然后搭建一个模型，模型经过训练后准确的找到输入数据和标签数据之间的**最优映射关系**，从而对新的未标记数据进行预测或分类，我们称作**监督学习(supervised learning)**
 
-<!--v-->
 
-## 监督学习
 
-* 没听懂？我们再举一个例子
-* 假如有一群 草泥马 和 牛马 组成的马群，这时候需要一个机器对马群进行分类，但是这个机器不知道 草泥马 和 牛马 长什么样儿，所以我们首先拿一堆 草泥马 和 牛马 的照片给机器看，告诉机器 草泥马 和 牛马 长什么样儿。机器经过反复的看，形成肌肉记忆，可以对 草泥马 和 牛马 形成自己的定义，然后机器就可以准确的对马群进行分类。
-<div align="center">
-    <img src="image-5.png" alt="图片1" width="300"height="310">
-    <img src="image-6.png" alt="图片2" width="300">
-</div>
-
-<!--v-->
 
 ## 无监督学习（unsupervised learning）
 
@@ -463,13 +513,15 @@ $$ (点的坐标，颜色) $$
 
 * 包装一下：我们只是单纯的将这两种马的照片给机器看，并没有告诉机器哪些是牛马，哪些是草泥马，机器在观察图片后发现马有两类，并能分辨出草原上的马分别属于哪一类
 
+-->
+
 <!--v-->
 
 ## 无监督学习（unsupervised learning）
 
-### 你是否在想，监督学习是因为找到了映射关系才能对图片进行分类的
+### 你是否在想，监督学习是因为找到了映射关系才能对西瓜进行分类的
 
-### 那无监督学习凭啥能把相似的图片认出来？
+### 那无监督学习凭啥能把相似的西瓜认出来？
 
 * 无监督学习会从无标签数据中学习有效的特征或表示，而同一类的图片具有相似的特征
 * 特征提取（Feature Extraction）：将任意数据（如文本或图像）转换成机器学习的数学特征
@@ -480,13 +532,9 @@ $$ (点的坐标，颜色) $$
 
 * 通过上面的描述，聪明的你肯定已经发现**回归任务本质上就是一种监督学习**，因为回归任务实际上是在是在数据和标签的基础上学习一个最优的函数曲线
 
-* 而分类任务则相对复杂，可以细分为 **分类(classification)** 和 **聚类(clustering)**两种
-
-* 有点懵是吧？正常。请注意前面的分类任务四字中的**分类**只是泛指，后面的分类则是专指**已知数据和其标签来进一步训练模型进行分类任务**
-
-* 换言之，
-**分类**是一种**监督学习**，例如告诉机器哪张是牛马哪张是草泥马
-而**聚类**是一种**无监督学习**，例如之前提到的KNN算法
+* 而分类任务则相对复杂，可以细分为 **分类(classification)** 和 **聚类(clustering)** 两种
+  - **分类**是一种**监督学习**，例如判断“好瓜”，“坏瓜”
+  - 而**聚类**是一种**无监督学习**，例如机器自动学习出的“深色瓜”，“浅色瓜”
 
 * 现在也有很多文章直接把机器学习的任务直接分为**分类**，**聚类**，**回归**三类，是更好的选择
 
