--- a/Lecture09/index.html
+++ b/Lecture09/index.html
@@ -138,6 +138,44 @@ $$ y = \left\{\begin{matrix}
 * 弹性网回归（ElasticNet Regression）Lasso和Ridge回归技术的混合体
 * XGBoost回归
 * 泊松回归（Poisson Regression）
+
+<!--v-->
+
+## 认识到优质数据的稀缺性
+
+* 在信息化社会，数据被誉为新的石油然而，与之相反的是，我们却面临着优质数据的严重缺乏。这种现象引发了一系列的问题，特别是在人工智能（AI）和机器学习（ML）领域，这一问题尤为突出。
+
+* 什么是优质数据？
+
+* 优质数据是指具有高度准确性、一致性、完整性和可靠性的数据。这种数据不仅要精确无误，还要对我们要解决的问题有直接的相关性。
+
+* 还有一些领域，比如医疗领域，获取足够的数据本身就是一个挑战。
+
+<!--v-->
+
+## 半监督学习（Semi-supervised learning）（仅做了解）
+
+* 顾名思义，半监督学习利用**少量有标签的数据和大量无标签**的数据来训练模型
+
+* 在数据稀缺条件下的被迫选择
+
+<!--s-->
+
+<div class="middle center">
+  <div style="width: 100%">
+
+  # Part.3 机器学习的分类
+  
+  </div>
+</div>
+
+<!--v-->
+
+<img src="image-7.png" width="85%" style="display: block; margin: 0 auto;">
+
+<!--v-->
+
+<img src="image-8.png" width="85%" style="display: block; margin: 0 auto;">
           </textarea>
         </section>
       </div>
