deploy: dfd257010930e2a58cc8517f50452986d1c73c6e

--- a/Lecture_09_Transformation_of_models/Lecture_09_Transformation_of_models.html
+++ b/Lecture_09_Transformation_of_models/Lecture_09_Transformation_of_models.html
@@ -369,35 +369,49 @@
 
 # 深度学习的发展：研究方向的细分和新模型的提出
 
-* 随着深度学习的发展和研究方向的细化，CV（计算机视觉，computer vision）和NLP（自然语言处理，Natuarl Language Processing）成为深度学习发展最迅速、最具前景的两大分支
+<!--v-->
 
----
+## 深度学习的发展
 
-## CV与CNN网络架构
+- 模型似乎不能一味的加大了
+  - 模型变大了，效果没有变好？
+  - 除了一些训练技巧之外，能不能从模型本身解决问题？
+- 研究领域出现细分
+  - 随着深度学习的发展和研究方向的细化，CV（计算机视觉，computer vision）和 NLP（自然语言处理，Natuarl Language Processing）成为深度学习发展最迅速、最具前景的两大分支
+- 需要新的东西出现了！
 
-* CNN，即卷积神经网络（Convolutional Neural Networks），是一种专门用于处理具有类似网格结构数据（如图像）的深度学习模型。
+<!--v-->
 
-* 它利用卷积核（也称为滤波器或kernel）在输入图像上进行滑动窗口操作，来获取“感受野”范围内数据之间的关系特征。一张图片里，相邻的像素显然是有更强的相关性，相比于MLP，CNN突出了这种相邻的关系特征，因而更加准确的获取了图片内的有用信息。
+## 新的模型架构：CNN 网络架构
 
-<p align = "center">    
-<img  src="kernel.gif" width="400" />
-</p>
+- CNN，即卷积神经网络（Convolutional Neural Networks），是一种专门用于处理具有类似网格结构数据（比如图像）的深度学习模型。
+  - 刚刚展示的 `ResNet101` 就是经典的 CNN 网络模型
 
----
+- 图片通常需要 **整体理解**，CNN 利用卷积核（也称为滤波器或 kernel）在输入图像上进行滑动窗口操作，来获取 **“感受野”** 范围内数据之间的关系特征。一张图片里，相邻的像素显然是有更强的相关性，相比于 MLP，CNN 突出了这种 **相邻的关系特征**，因而更加准确的获取了图片内的有用信息。
 
-## NLP与RNN网络架构
+<img src="kernel.gif" width="400" style="display: block; margin: 0 auto;"/>
 
-* RNN，即循环神经网络（Recurrent Neural Networks），是一种用于处理序列数据（如语言）的深度学习模型。
+<!--v-->
 
-* 普通的神经网络缺乏记忆能力，因此在处理序列数据时表现不佳。例如，你要预测句子的下一个单词是什么，一般需要用到前面的单词，因为一个句子中前后单词并不是独立的。
+## NLP 与 RNN 网络架构
 
-* RNN之所以称为循环神经网路，即一个序列当前的输出与前面的输出也有关。具体的表现形式为网络会对前面的信息进行记忆并应用于当前输出的计算中。
+- RNN，即循环神经网络（Recurrent Neural Networks），是一种用于处理序列数据（如语言）的深度学习模型。
 
-<p align = "center">    
-<img  src="image-13.png" width="400" />
-</p>
+- 理解句子需要 **结合上下文**，而普通的神经网络缺乏 **记忆能力**，因此在处理序列数据时表现不佳。例如，你要预测句子的下一个单词是什么，一般需要用到前面的单词，因为一个句子中前后单词并不是独立的。
 
----
+- RNN 之所以称为循环神经网路，即一个序列当前的输出与前面的输出也有关。具体的表现形式为网络会对前面的信息进行记忆并应用于当前输出的计算中。
+
+<img src="image-13.png" width="400"  style="display: block; margin: 0 auto;"/>
+
+<!--v-->
+
+## 可惜，好景不长
+
+- 算力突飞猛进
+- 金钱开始涌入 AI 市场
+- 回到我们的主题，这是一个 **力大砖飞** 的时代
+
+<!--s-->
 
 ## 现在的神经网络发展：从功能化的堆叠到纯粹的暴力堆层
 
