--- a/Lecture_09_Transformation_of_models/index.html
+++ b/Lecture_09_Transformation_of_models/index.html
@@ -33,36 +33,40 @@
 <div class="middle center">
   <div style="width: 100%">
 
-# Intro：GPT模型参数爆炸式增长
-      
+  # Part.0 GPT(4)是怎样炼成的
+  
   </div>
 </div>
 
 <!--v-->
-## Intro：GPT模型参数爆炸式增长
 
-从2018年起，OpenAI就开始发布**生成式预训练语言模型GPT**（Generative Pre-trained Transformer），可用于生成文章、代码、机器翻译、问答等各类内容。每一代GPT模型的参数量都爆炸式增长，堪称“越大越好”。2019年2月发布的GPT-2参数量为15亿，而2020年5月的GPT-3，参数量达到了1750亿。从下面的参数量可以看出，这是个多么恐怖的模型。
+## GPT的诞生
+
+正如我们第一节课所说，ChatGPT是2022年末出生的。
+
+但是，GPT可不是。第一代GPT是2018年发布的，那时你们中的大部分人应该在小学六年级。
+
+六年之后，GPT已经变成了当初的它完全不敢想象的样子~~免责声明：本人不是GPT，不保证了解它的内心想法~~。每一代GPT模型的参数量都爆炸式增长，堪称“越大越好”。2019年2月发布的GPT-2参数量为15亿，而2020年5月的GPT-3，参数量达到了1750亿。从下面的参数量可以看出，这是个多么恐怖的模型。
 
 <img src="assets/image.png" style="display: block; margin: 0 auto;"/>
 
 - 最新的GPT-4在120层中总共包含了1.8万亿参数，规模是GPT-3的10倍以上
 - 这里有 [一个神奇的网站](https://bbycroft.net/llm) ，可视化地告诉了我们这个庞大的差距
-- 你可能有疑问
 
 <!--v-->
 
-## 你可能有疑问
+## 问题来了
 
-- 为什么LLM发展的趋势是不断提高参数量？
-- 或者说，增加参数量是如何让LLM的performance变的更好的？
-- 通过这节课的学习，你或许能找到答案
+- 模型真的是参数越多越好吗？
+- 如果真是这样，我们的感知机能不能也变得更好？
+- 第三章开始，我们将正式进入21~~生物学的~~世纪。
 
 <!--s-->
 
 <div class="middle center">
   <div style="width: 100%">
 
-# Re：从零开始的ML学习
+  # Part.1 Re：从零开始的ML学习
       
   </div>
 </div>
@@ -174,7 +178,7 @@
 <div class="middle center">
   <div style="width: 100%">
 
-# 感知机的拓展：从二维到 $n$ 维
+  # Part.2 感知机的拓展：从二维到 $n$ 维
   
   </div>
 </div>
@@ -244,7 +248,7 @@
 <div class="middle center">
   <div style="width: 100%">
 
-# 深度神经网络的诞生：多层感知机（MLP）
+  # Part.3 深度神经网络的诞生：多层感知机（MLP）
   
   </div>
 </div>
@@ -349,7 +353,7 @@
 <div class="middle center">
   <div style="width: 100%">
 
-# 走向模块化的神经网络
+  # Part.4 走向模块化的神经网络
   
   </div>
 </div>
@@ -406,7 +410,7 @@
 <div class="middle center">
   <div style="width: 100%">
 
-# 深度学习的发展：研究方向的细分和新模型的提出
+  # Part.5 深度学习的发展：研究方向的细分和新模型的提出
   
   </div>
 </div>
@@ -468,7 +472,7 @@
 <div class="middle center">
   <div style="width: 100%">
 
-# 力大砖飞：深度的增加与堆叠
+  # Part.6 力大砖飞：深度的增加与堆叠
   
   </div>
 </div>
